[package]
name = "whothis"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3.0.2"
clap = "2.33.3"
config = "0.11.0"
reqwest = {version = "0.11.4", features = ["json"] }
tokio = { version = "1.10.1", features = ["full"] }
serde_derive = "1.0.130"
serde_with = { version = "1.9.4", features = ["json"]}
serde_json = "1.0.67"

[dependencies.serde]
features = ["derive"]
version = "1"
